# GA_Snake

./: .gitignore  README.md  activation_functions.py  crossover_methods.py  dict_maker.py  ga_brain.py  ga_factory.py  game.py  highest_performing_runs.py  main.py  max_median_and_max_food.json  median_calculator.py  mutation_methods.py  plotting_media_plot_mut.py  pyproject.toml  replay.py  selection_methods.py  snake.py  snake_brain.py
beast_snakes_1/: Gen_10_snake.pkl  Gen_11_snake.pkl  Gen_12_snake.pkl  Gen_13_snake.pkl  Gen_14_snake.pkl  Gen_15_snake.pkl  Gen_16_snake.pkl  Gen_17_snake.pkl  Gen_18_snake.pkl  Gen_19_snake.pkl  Gen_1_snake.pkl  Gen_20_snake.pkl  Gen_21_snake.pkl  Gen_22_snake.pkl  Gen_23_snake.pkl  Gen_24_snake.pkl  Gen_25_snake.pkl  Gen_26_snake.pkl  Gen_27_snake.pkl  Gen_28_snake.pkl  Gen_29_snake.pkl  Gen_2_snake.pkl  Gen_30_snake.pkl  Gen_3_snake.pkl  Gen_4_snake.pkl  Gen_5_snake.pkl  Gen_6_snake.pkl  Gen_7_snake.pkl  Gen_8_snake.pkl  Gen_9_snake.pkl
best_snakes/: Gen_10_snake.pkl  Gen_11_snake.pkl  Gen_12_snake.pkl  Gen_13_snake.pkl  Gen_14_snake.pkl  Gen_1_snake.pkl  Gen_2_snake.pkl  Gen_3_snake.pkl  Gen_4_snake.pkl  Gen_5_snake.pkl  Gen_6_snake.pkl  Gen_7_snake.pkl  Gen_8_snake.pkl  Gen_9_snake.pkl
calculation_scripts/: dict_maker.py  dict_maker_combined.py  file_reader.py  graph_maker.py  plots.py
combined_data/: alpha_selection_single_point_crossover_random_mutation_2000_0.05_elitism_0.1_seed_combined.csv  alpha_selection_two_point_crossover_random_mutation_2000_0.05_elitism_0.1_seed_combined.csv  (+6 more)
old/: ga_brain.py
(+1460 files in other folders)
