[tool.poetry]
name = "homemade-snake"
version = "0.1.0"
description = ""
authors = ["Morten Bendeke <mbendeke@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
torch = "^2.3.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
